--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       image: 'fitbenchmarking/fitbenchmarking-deps:latest'
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
@@ -33,7 +33,7 @@ jobs:
         ci/system_tests_default.sh
     - name: 'Upload Test Results'
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: test-results/default_system_pytest.xml
 
@@ -44,7 +44,7 @@ jobs:
       image: 'fitbenchmarking/fitbenchmarking-extras:latest'
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
@@ -56,7 +56,7 @@ jobs:
         ci/system_tests.sh
     - name: 'Upload Test Results'
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: test-results/full_system_pytest.xml
 
@@ -67,7 +67,7 @@ jobs:
       image: 'fitbenchmarking/fitbenchmarking-extras:latest'
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
@@ -87,89 +87,76 @@ jobs:
         git-commit: ${{ github.event.pull_request.head.sha }}
     - name: 'Upload Test Results'
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: test-results/full_unit_pytest.xml
 
-  linting_linux:
-    name: Linting Tests (Linux)
-    runs-on: 'ubuntu-latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-    - name: 'Install fitbenchmarking'
-      run: |
-        pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        pip install --upgrade .[dev]
-    - name: 'Run Linting'
-      run: ci/linting_tests.sh
-
-  default_unit_linux:
-    name: 'Default Unit Tests (linux)'
-    runs-on: 'ubuntu-latest'
+  default_unit_tests:
+    name: Default unit tests
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
+        os: [ubuntu-latest, windows-latest]
+        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Python
+      uses: actions/checkout@v4
+    - name: Install python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install packages for python 3.8, 3.9, 3.10 or 3.11
-      if: matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10' || matrix.python-version == '3.11'
+        python-version: ${{ matrix.python }}
+
+    - name: Install default dependencies for linux
+      if: runner.os == 'Linux'
       run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-    - name: Install packages for python 3.12
-      if: matrix.python-version == '3.12'
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+    - name: Install default dependencies for windows
+      if: runner.os == 'Windows'
       run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-    - name: Install dev dependencies
-      run: sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-    - name: 'Running Tests'
+        python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        python -m pip install --upgrade .[dev]
+
+    - name: Run linux tests
+      if: runner.os == 'Linux'
       run: ci/unit_tests_default.sh
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
+    - name: Run windows tests
+      if: runner.os == 'Windows'
+      run: bash ci/unit_tests_default.sh
+
+    - name: Upload test results for linux
+      if: runner.os == 'Linux' && matrix.python == '3.12'
+      uses: actions/upload-artifact@v4
       with:
         path: test-results/default_unit_pytest.xml
 
-  default_unit_windows:
-    name: 'Default Unit Tests'
-    runs-on: 'windows-latest'
+  linting_test:
+    name: Linting test (linux)
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-    - name: 'Choose Python Version'
-      uses: actions/setup-python@v4
+      uses: actions/checkout@v4
+    - name: Install python
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
-    - name: Installing
+        python-version: '3.x'
+        check-latest: true
+    - name: Install default dependencies for fitbenchmarking
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install wheel
-        python -m pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
-        python -m pip install --upgrade .[dev]
-    - name: 'Running Tests'
-      run: |
-        bash ci/unit_tests_default.sh
+        pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        pip install --upgrade .[dev]
+    - name: Run linting
+      run: ci/linting_tests.sh
 
   publish-test-results:
     name: 'Publish Test Results'
-    needs: [default_system_linux, full_system_linux, default_unit_linux, full_unit_linux]
+    needs: [default_system_linux, full_system_linux, default_unit_tests, full_unit_linux]
     runs-on: 'ubuntu-latest'
     if: always()
     steps:
       - name: 'Download Artifacts'
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
 
