--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.x'
+        check-latest: true
     - name: Installing
       run: |
         python -m pip install --upgrade pip
@@ -23,9 +24,10 @@ jobs:
     runs-on: 'windows-latest'
     steps:
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.x'
+        check-latest: true
     - name: Installing
       run: |
         python -m pip install --upgrade pip
