--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 authors = [{ name = "FitBenchmarkign Team" }]
 description = "FitBenchmarking: A tool for comparing fitting software"
 readme = "README.md"
-requires-python = ">=3.7.1"
+requires-python = ">=3.8.1"
 keywords = [
     "benchmark",
     "fitting",
@@ -38,7 +38,7 @@ dependencies = [
 
 [project.optional-dependencies]
 bumps = ['bumps>=0.9.0']
-DFO = ['DFO-LS', 'dfogn']
+DFO = ['DFO-LS']
 gofit = ['gofit']
 gradient-free = ['gradient-free-optimizers']
 hogben = ['HOGBEN']
@@ -56,8 +56,8 @@ dev = [
     'pytest-cov>=4.0.0',
     'coveralls',
     'coverage[toml]>=6.3',
-    'pylint',
-    'flake8',
+    'pylint==3.2.6',
+    'flake8==7.1.1',
     'pylint-exit',
     'pandas',
     'iminuit>=2.25.2',
@@ -122,7 +122,8 @@ ignored-modules = [
     "pygsl",
     "ral_nlls",
     "theseus",
-    "gofit"
+    "gofit",
+    "paramonte"
 ]
 
 [tool.pylint.design]
