--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,11 +93,11 @@ jobs:
         path: test-results/full_unit_pytest.xml
 
   default_unit_tests:
-    name: Default Unit Tests (Linux)
+    name: Default Unit Tests
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-13]
         python: ['3.8', '3.x']
     runs-on: ${{ matrix.os }}
     steps:
@@ -112,8 +112,8 @@ jobs:
       run: |
         python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install --upgrade .[dev]
-    - name: Run linux tests
-      if: runner.os == 'Linux'
+    - name: Run linux or mac tests
+      if: runner.os == 'Linux' || runner.os == 'macOS'
       run: ci/unit_tests_default.sh
     - name: Run windows tests
       if: runner.os == 'Windows'
