--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13]
+        os: [ubuntu-latest, windows-latest]
         python: ['3.8', '3.x']
     runs-on: ${{ matrix.os }}
     steps:
@@ -112,8 +112,8 @@ jobs:
       run: |
         python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install --upgrade .[dev]
-    - name: Run linux or mac tests
-      if: runner.os == 'Linux' || runner.os == 'macOS'
+    - name: Run linux tests
+      if: runner.os == 'Linux'
       run: ci/unit_tests_default.sh
     - name: Run windows tests
       if: runner.os == 'Windows'
